# MH4900_Final_Year_Project_simulations

./: CMakeLists.txt  Plot_history.ipynb  analytic_solution.cpp  monte_carlo_simulation.cpp  sample_1.cpp
Branching_01/: Plot_history.ipynb  analytic_solution.cpp  monte_carlo_simulation.cpp
Branching_01/output/: t_equals_0.csv  t_equals_1.csv  t_equals_10.csv  t_equals_2.csv  t_equals_3.csv  t_equals_4.csv  t_equals_5.csv  t_equals_6.csv  t_equals_7.csv  t_equals_8.csv  t_equals_9.csv  x_equals_0.csv  x_equals_1.csv  x_equals_10.csv  x_equals_10_monte_carlo.csv  x_equals_2.csv  x_equals_2_monte_carlo.csv  x_equals_3_monte_carlo.csv  x_equals_4.csv  x_equals_4_monte_carlo.csv  x_equals_5.csv  x_equals_5_monte_carlo.csv  x_equals_6.csv  x_equals_6_monte_carlo.csv  x_equals_7.csv  x_equals_7_monte_carlo.csv  x_equals_8.csv  x_equals_8_monte_carlo.csv  x_equals_9.csv  x_equals_9_monte_carlo.csv
Branching_02/: Plot_history.ipynb  analytic_solution.cpp  monte_carlo_simulation.cpp
Branching_02/output/: n_equals_3_t_equals_0.csv  n_equals_3_t_equals_1.csv  n_equals_3_t_equals_10.csv  n_equals_3_t_equals_2.csv  n_equals_3_t_equals_3.csv  n_equals_3_t_equals_4.csv  n_equals_3_t_equals_5.csv  n_equals_3_t_equals_6.csv  n_equals_3_t_equals_7.csv  n_equals_3_t_equals_8.csv  n_equals_3_t_equals_9.csv  n_equals_3_x_equals_0.csv  n_equals_3_x_equals_1.csv  n_equals_3_x_equals_10.csv  n_equals_3_x_equals_2.csv  n_equals_3_x_equals_2_monte_carlo.csv  n_equals_3_x_equals_3.csv  n_equals_3_x_equals_3_monte_carlo.csv  n_equals_3_x_equals_4.csv  n_equals_3_x_equals_4_monte_carlo.csv  n_equals_3_x_equals_5.csv  n_equals_3_x_equals_5_monte_carlo.csv  n_equals_3_x_equals_6_monte_carlo.csv  n_equals_3_x_equals_7.csv  n_equals_3_x_equals_7_monte_carlo.csv  n_equals_3_x_equals_8.csv  n_equals_3_x_equals_9.csv
Branching_03/: Plot_history.ipynb  Plot_history_probabilistic.ipynb  analytic_solution.cpp  monte_carlo_probabilistic.cpp  monte_carlo_simulation.cpp
Branching_03/output/: x_equals_10_analytic.csv  x_equals_4_analytic.csv  x_equals_4_monte_carlo.csv  x_equals_4_monte_carlo_probabilistic.csv  x_equals_5_analytic.csv  x_equals_5_monte_carlo.csv  x_equals_5_monte_carlo_probabilistic.csv  x_equals_6_analytic.csv  x_equals_6_monte_carlo.csv  x_equals_6_monte_carlo_probabilistic.csv  x_equals_7_analytic.csv  x_equals_7_monte_carlo_probabilistic.csv  x_equals_8_analytic.csv  x_equals_8_monte_carlo_probabilistic.csv  x_equals_9_monte_carlo_probabilistic.csv
Branching_04/: Plot_history.ipynb  analytic_solution.cpp  monte_carlo_simulation.cpp
Branching_04/output/: x_equals_4_y_equals_4_monte_carlo.csv  x_equals_4_y_equals_5_monte_carlo.csv  x_equals_4_y_equals_6_monte_carlo.csv  x_equals_5_y_equals_4_monte_carlo.csv  x_equals_5_y_equals_5_analytic.csv  x_equals_5_y_equals_5_monte_carlo.csv  x_equals_5_y_equals_6_monte_carlo.csv  x_equals_6_y_equals_4_monte_carlo.csv  x_equals_6_y_equals_5_monte_carlo.csv  x_equals_6_y_equals_6_monte_carlo.csv
Branching_04_corrected/: Plot_history.ipynb  analytic_solution.cpp  monte_carlo_simulation.cpp
Branching_04_corrected/output/: x_equals_4_y_equals_4_monte_carlo.csv  x_equals_4_y_equals_5_monte_carlo.csv  x_equals_4_y_equals_6_monte_carlo.csv  x_equals_5_y_equals_4_analytic.csv  x_equals_5_y_equals_4_monte_carlo.csv  x_equals_5_y_equals_5_monte_carlo.csv  x_equals_5_y_equals_6_analytic.csv  x_equals_5_y_equals_6_monte_carlo.csv  x_equals_6_y_equals_4_monte_carlo.csv  x_equals_6_y_equals_5_monte_carlo.csv  x_equals_6_y_equals_6_analytic.csv  x_equals_6_y_equals_6_monte_carlo.csv
Branching_05/: analytic_solution.cpp  monte_carlo_simulation.cpp
Branching_06/: analytic_solution.cpp  monte_carlo_simulation.cpp
Branching_07/: analytic_solution.cpp  monte_carlo_simulation.cpp
Branching_08/: analytic_solution.cpp  monte_carlo_simulation.cpp
Dalang/: Plot_history.ipynb  analytic_solution.cpp  monte_carlo_simulation.cpp
Dalang/output/: estimated_values.csv  t_equals_0.csv  t_equals_1.csv  t_equals_10.csv  t_equals_2.csv  t_equals_3.csv  t_equals_4.csv  t_equals_5.csv  t_equals_6.csv  t_equals_7.csv  t_equals_8.csv  t_equals_9.csv  x_equals_0.csv  x_equals_neg_2.csv  x_equals_neg_3.csv  x_equals_neg_4.csv  x_equals_pos_1.csv  x_equals_pos_5.csv
output/: estimated_values.csv  t_equals_0.csv  t_equals_10.csv  t_equals_2.csv  t_equals_4.csv  t_equals_6.csv  x_equals_neg_1.csv  x_equals_neg_4.csv  x_equals_neg_5.csv
telegraph_equation/: Plot_history.ipynb  analytic_solution.cpp  monte_carlo_simulation.cpp
telegraph_equation/output/: estimated_values.csv  t_equals_1.csv  t_equals_3.csv  t_equals_5.csv  t_equals_7.csv  t_equals_8.csv  t_equals_9.csv  x_equals_0.csv  x_equals_neg_2.csv  x_equals_pos_3.csv
