cmake_minimum_required(VERSION 3.18..3.20)

project(mymodule)

# find_package(Python REQUIRED COMPONENTS Interpreter Development NumPy)
# find_package(pybind11 REQUIRED CONFIG)
# find_package(xtensor-python REQUIRED)
find_package(xtensor REQUIRED)

add_executable(sample_1 sample_1.cpp)
add_executable(telegraph_equation_analytic_solution telegraph_equation/analytic_solution.cpp)
add_executable(telegraph_equation_monte_carlo_simulation telegraph_equation/monte_carlo_simulation.cpp)
add_executable(Dalang_analytic_solution Dalang/analytic_solution.cpp)
add_executable(Dalang_monte_carlo_simulation Dalang/monte_carlo_simulation.cpp)
add_executable(Branching_01_analytic_solution Branching_01/analytic_solution.cpp)
add_executable(Branching_01_monte_carlo_simulation Branching_01/monte_carlo_simulation.cpp)
add_executable(Branching_02_analytic_solution Branching_02/analytic_solution.cpp)
add_executable(Branching_02_monte_carlo_simulation Branching_02/monte_carlo_simulation.cpp)
add_executable(Branching_03_analytic_solution Branching_03/analytic_solution.cpp)
add_executable(Branching_03_monte_carlo_simulation Branching_03/monte_carlo_simulation.cpp)
add_executable(Branching_03_monte_carlo_probabilistic Branching_03/monte_carlo_probabilistic.cpp)
add_executable(Branching_04_analytic_solution Branching_04/analytic_solution.cpp)
add_executable(Branching_04_monte_carlo_simulation Branching_04/monte_carlo_simulation.cpp)
add_executable(Branching_04_corrected_analytic_solution Branching_04_corrected/analytic_solution.cpp)
add_executable(Branching_04_corrected_monte_carlo_simulation Branching_04_corrected/monte_carlo_simulation.cpp)
add_executable(Branching_05_analytic_solution Branching_05/analytic_solution.cpp)
add_executable(Branching_05_monte_carlo_simulation Branching_05/monte_carlo_simulation.cpp)
add_executable(Branching_06_analytic_solution Branching_06/analytic_solution.cpp)
add_executable(Branching_06_monte_carlo_simulation Branching_06/monte_carlo_simulation.cpp)
add_executable(Branching_07_analytic_solution Branching_07/analytic_solution.cpp)
add_executable(Branching_07_monte_carlo_simulation Branching_07/monte_carlo_simulation.cpp)
add_executable(Branching_08_analytic_solution Branching_08/analytic_solution.cpp)
add_executable(Branching_08_monte_carlo_simulation Branching_08/monte_carlo_simulation.cpp)

target_link_libraries(sample_1 PUBLIC xtensor)
target_link_libraries(telegraph_equation_analytic_solution PUBLIC xtensor)
target_link_libraries(telegraph_equation_monte_carlo_simulation PUBLIC xtensor)
target_link_libraries(Dalang_analytic_solution PUBLIC xtensor)
target_link_libraries(Dalang_monte_carlo_simulation PUBLIC xtensor)
target_link_libraries(Branching_01_analytic_solution PUBLIC xtensor)
target_link_libraries(Branching_01_monte_carlo_simulation PUBLIC xtensor)
target_link_libraries(Branching_02_analytic_solution PUBLIC xtensor)
target_link_libraries(Branching_02_monte_carlo_simulation PUBLIC xtensor)
target_link_libraries(Branching_03_analytic_solution PUBLIC xtensor)
target_link_libraries(Branching_03_monte_carlo_simulation PUBLIC xtensor)
target_link_libraries(Branching_03_monte_carlo_probabilistic PUBLIC xtensor)
target_link_libraries(Branching_04_analytic_solution PUBLIC xtensor)
target_link_libraries(Branching_04_monte_carlo_simulation PUBLIC xtensor)
target_link_libraries(Branching_04_corrected_analytic_solution PUBLIC xtensor)
target_link_libraries(Branching_04_corrected_monte_carlo_simulation PUBLIC xtensor)
target_link_libraries(Branching_05_analytic_solution PUBLIC xtensor)
target_link_libraries(Branching_05_monte_carlo_simulation PUBLIC xtensor)
target_link_libraries(Branching_06_analytic_solution PUBLIC xtensor)
target_link_libraries(Branching_06_monte_carlo_simulation PUBLIC xtensor)
target_link_libraries(Branching_07_analytic_solution PUBLIC xtensor)
target_link_libraries(Branching_07_monte_carlo_simulation PUBLIC xtensor)
target_link_libraries(Branching_08_analytic_solution PUBLIC xtensor)
target_link_libraries(Branching_08_monte_carlo_simulation PUBLIC xtensor)
